Initial commit: CBT exam app

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "cbt-exam",
+  "homepage": "https://github.com/Anxhhh/cbt-exam",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "main": "main.cjs",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "electron": "electron ."
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
