--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
   "name": "cbt-exam",
-  "homepage": "https://github.com/Anxhhh/cbt-exam",
+  "homepage": "https://anxhhh.github.io/cbt-exam",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "main": "main.cjs",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
     "electron": "electron ."
   },
   "dependencies": {
-    "gh-pages": "^6.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
     "electron": "^30.0.0",
+    "gh-pages": "^6.3.0",
     "vite": "^5.0.0"
   }
 }
