Initial commit: CBT exam app

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cbt-exam",
-  "homepage": "https://Anxhhh.github.io/cbt-exam",
+  "homepage": "https://anxhhh.github.io/cbt-exam",
   "private": true,
   "version": "1.0.0",
   "type": "module",
