--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron": "electron ."
   },
   "dependencies": {
+    "csv-parser": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
