--- a/package.json
+++ b/package.json
@@ -6,23 +6,38 @@
   "type": "module",
   "main": "main.cjs",
   "scripts": {
-    "predeploy": "npm run build",
-    "start": "npm run build && npm run electron:start",
-    "dev": "concurrently -k \"vite\" \"npm run electron:dev\"",
-    "build": "vite build",
-    "deploy": "gh-pages -d dist",
-    "preview": "vite preview",
-    "electron:dev": "cross-env IS_DEV=true electron-forge start",
-    "electron:start": "electron .",
-    "electron:build": "electron-forge make"
-  },
+  "predeploy": "npm run build",
+  "start": "electron-forge start",
+
+  "dev:vite": "vite",
+  "dev:electron": "cross-env IS_DEV=true electron-forge start",
+  "dev": "concurrently -k \"npm run dev:vite\" \"npm run dev:electron\"",
+
+  "build": "vite build",
+  "deploy": "gh-pages -d dist",
+  "preview": "vite preview",
+
+  "package": "electron-forge package",
+  "make": "electron-forge make"
+},
   "dependencies": {
     "csv-parser": "^3.2.0",
+    "electron-squirrel-startup": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^7.11.1",
+    "@electron-forge/maker-deb": "^7.11.1",
+    "@electron-forge/maker-rpm": "^7.11.1",
+    "@electron-forge/maker-squirrel": "^7.11.1",
+    "@electron-forge/maker-zip": "^7.11.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.11.1",
+    "@electron-forge/plugin-fuses": "^7.11.1",
+    "@electron/fuses": "^1.8.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
     "electron": "^30.0.0",
     "gh-pages": "^6.3.0",
     "vite": "^5.0.0"
